local website test

--- a/Website/index.html
+++ b/Website/index.html
@@ -72,10 +72,10 @@
         </div>
 
         <!--buttons-->
-        <div id="buttons">
+        <div id="buttons" >
             <!-- Colored raised button -->
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-                Button
+            <button name="button" value="raised" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                raised
             </button>
             <!-- Accent-colored raised button -->
             <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
