--- a/website/index.html
+++ b/website/index.html
@@ -76,7 +76,7 @@
         <!--buttons-->
         <div id="buttons" >
             <!-- Colored raised button -->
-            <button name="button" value="raised" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+            <button name="button" value="raised" id="raisedbutton" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
                 raised
             </button>
             <!-- Accent-colored raised button -->
