--- a/website/index.html
+++ b/website/index.html
@@ -111,8 +111,16 @@
         </div>
 
         <div id="form">
+            <div class="mdl-textfield mdl-js-textfield">
+                <input class="mdl-textfield__input" type="text" id="fname">
+                <label class="mdl-textfield__label" for="fname">First name</label>
+            </div>
+        </div>
 
-
+        <div class="mdl-textfield mdl-js-textfield">
+            <input class="mdl-textfield__input" type="text" pattern="[0-9]*" id="phone">
+            <label class="mdl-textfield__label" for="phone">Phone</label>
+            <span class="mdl-textfield__error">Digits only</span>
         </div>
 
 
