new test visible

--- a/website/index.html
+++ b/website/index.html
@@ -81,15 +81,15 @@
         <div id="buttons">
             <!-- Colored raised button -->
             <button name="button" value="raised" id="raisedbutton" onclick="textTransform(this)"
-                    class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                    class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored button">
                 raised
             </button>
             <!-- Accent-colored raised button -->
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent button">
                 Button
             </button>
             <!-- Accent-colored raised button with ripple -->
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent button">
                 Button
             </button>
         </div>
