--- a/website/index.html
+++ b/website/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-<h1>awesome</h1>
+<h1 id="h1">awesome</h1>
 
 <div class="demo-layout-transparent mdl-layout mdl-js-layout">
     <div id="imageheader"></div>
