--- a/website/loginPage.html
+++ b/website/loginPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>loginPage</title>
+    <title>Login page</title>
 
     <!--        material design lite       -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
