--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>demo website</title>
+    <title>Home Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
