--- a/website/loginPage.html
+++ b/website/loginPage.html
@@ -27,7 +27,7 @@
 
         <form action="index.html" id="formLogin">
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" value="Admin" type="text" pattern="[A-Z,a-z]*" id="username"/>
+                <input class="mdl-textfield__input" type="text" pattern="[A-Z,a-z]*" id="username"/>
                 <label class="mdl-textfield__label" for="username">Username</label>
                 <span class="mdl-textfield__error">Only alphabet and no spaces, please!</span>
             </div>
