--- a/website/loginPage.html
+++ b/website/loginPage.html
@@ -38,13 +38,12 @@
                 <span class="mdl-textfield__error">Onjuist wachtwoord</span>
             </div>
 
-            <button type="submit" class="mdl-button mdl-js-button mdl-button--raised" onclick="loginButton()">Login</button>
+            <button type="submit" class="mdl-button mdl-js-button mdl-button--raised" onclick="loginButton()"
+                    id="submit">Login
+            </button>
 
         </form>
-
-
     </main>
-
 </div>
 
 </body>
