--- a/website/loginPage.html
+++ b/website/loginPage.html
@@ -38,7 +38,7 @@
                 <span class="mdl-textfield__error">Onjuist wachtwoord</span>
             </div>
 
-            <button type="submit" class="mdl-button mdl-js-button mdl-button--raised" onclick="loginButton()"
+            <button type="submit" class="mdl-button mdl-js-button mdl-button--raised" onclick="return loginButton()"
                     id="submit">Login
             </button>
 
