tests in different files 4

--- a/website/index.html
+++ b/website/index.html
@@ -78,7 +78,7 @@
         <!--buttons-->
         <div id="buttons">
             <!-- Colored raised button -->
-            <button name="button" value="raised" id="raisedbutton" onclick="textTransform(this)"
+            <button name="button" value="raised" id="ctaButton" onclick="textTransform(this)"
                     class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored button">
                 raised
             </button>
